[package]
name = "printy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.64", default-features=false, features = ["std"] }
bitvec = "1.0.1"
chrono = "0.4.22"
fontdue = "0.7.2"
serial = "0.4.0"
